namespace CustomLib.Models.Users
{
    public class UserPost : UserPut
    {

    }
}
