namespace CustomLib.Models.Users
{
    public class UserPut
    {
        public string FirstName { get; set; } = "";
        public string LastName { get; set; } = "";
    }
}
