classDiagram

    direction BT

    class UserGet {
        <<HttpResponse>>
        string UserId
        DateTime CreatedAt
        DateTime UpdatedAt
        DateTime DeletedAt
    }
    class UserPost {
        <<HttpRequest>>
    }
    class UserPut {
        <<HttpRequest>>
        string FirstName
        string LastName
    }

    UserGet <|-- UserPost
    UserPost <|-- UserPut

    class IssueGet {
        <<HttpResponse>>
        string IssueId
        DateTime CreatedAt
        DateTime UpdatedAt
        DateTime DeletedAt
    }
    class IssuePost {
        <<HttpRequest>>
        string UserId
    }
    class IssuePut {
        <<HttpRequest>>
        string Label
    }

    IssueGet <|-- IssuePost
    IssuePost <|-- IssuePut

    class CommentGet {
        <<HttpResponse>>
        string CommentId
        DateTime CreatedAt
        DateTime UpdatedAt
        DateTime DeletedAt
    }
    class CommentPost {
        <<HttpRequest>>
        string UserId
        string IssueId
    }
    class CommentPut {
        <<HttpRequest>>
        string Text
    }

    CommentGet <|-- CommentPost
    CommentPost <|-- CommentPut

    style UserGet fill:yellow
    style IssueGet fill:yellow
    style CommentGet fill:yellow